--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,33 @@
 /* shared */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap');
-
+.html{
+    box-sizing: border-box;
+}
+body{
+    padding: auto 130px;
+}
 .text-primary {
     color: #FF5400;
     font-family: 'Mulish', sans-serif;
 }
-
+/* header */
+.header{
+    margin: 50px 130px;
+}
 /* nav */
-nav {
+img{
+    width: auto;
+}
+.img-title{
+    display: flex;
+    justify-content: space-around;
+    gap: 16px;
+}
+
+.nav-container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-bar {
@@ -23,13 +41,11 @@ nav {
     font-weight: 800;
 }
 
-.nav-title::before {
-    content: url(Images/Group\ 40071\ \(2\).png);
-}
-
-nav>ul {
+.nav-bar > ul {
     display: flex;
-
+    align-items: center;
+    justify-content: space-between;
+    gap: 44px;
 }
 
 nav li {
