--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,46 @@
 /* shared */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap');
-.html{
+
+.html {
     box-sizing: border-box;
 }
-body{
-    padding: auto 130px;
+
+* {
+    margin: 0px;
 }
+
+body {
+    margin-left: 130px;
+    margin-right: 130px;
+}
+
 .text-primary {
     color: #FF5400;
     font-family: 'Mulish', sans-serif;
 }
+
 /* header */
-.header{
-    margin: 50px 130px;
+.header {
+    margin-top: 50px;
 }
+
 /* nav */
-img{
+img {
     width: auto;
 }
-.img-title{
+
+.img-title {
     display: flex;
     justify-content: space-around;
     gap: 16px;
 }
 
-.nav-container{
+.nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
+
 }
 
 .nav-bar {
@@ -41,7 +54,7 @@ img{
     font-weight: 800;
 }
 
-.nav-bar > ul {
+.nav-bar>ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -50,4 +63,347 @@ img{
 
 nav li {
     list-style: none;
+}
+
+/* banner */
+.banner-container {
+
+    margin-top: 49px;
+    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+    background-repeat: no-repeat;
+    background-color: #FF5400;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 18px;
+    background-size: cover;
+    font-family: 'Mulish';
+
+}
+
+.banner-title {
+    color: #FFF;
+    font-size: 64px;
+    font-weight: 800;
+    padding-top: 106px;
+    text-align: center;
+}
+
+.banner-description {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    max-width: 676px;
+    text-align: center;
+    margin-top: 24px;
+    margin-bottom: 48px;
+}
+
+.banner-input {
+    display: flex;
+    gap: 24px;
+    margin-bottom: 106px;
+    background-color: rgba(255, 255, 255, 0.30);
+    padding: 15px;
+    border-radius: 8px;
+}
+
+.banner-input-field {
+    max-width: 160px;
+    background-color: #FFF;
+    border-radius: 8px;
+    display: flex;
+    gap: 60px;
+    padding: 16px 15px 16px 16px;
+
+    color: rgba(19, 19, 24, 0.50);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.banner-where-field {
+    color: rgba(19, 19, 24, 0.50);
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 160px;
+    padding: 16px 70px 16px 16px;
+    background-color: #FFF;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.banner-find-field {
+    background-color: #FFF;
+    border-radius: 8px;
+    color: rgba(19, 19, 24, 0.50);
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 160px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 16px 35px;
+    gap: 8px;
+    background-color: #FF5400;
+    color: #FFF;
+}
+
+.header {
+    margin-bottom: 100px;
+}
+
+/* section tours */
+
+.tours-container {
+    margin-top: 100px;
+    display: inline-flex;
+    gap: 50px;
+}
+
+.tours-description {
+    color: rgba(19, 19, 24, 0.70);
+    font-family: 'Mulish';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+
+.tours-heading {
+    color: #131318;
+    text-align: start;
+    font-family: 'Mulish';
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.btn-primary {
+    color: #FFF;
+    text-align: center;
+    font-family: 'Mulish';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    border-radius: 8px;
+    background: #FF5400;
+    width: 174px;
+    height: 52px;
+    flex-shrink: 0;
+}
+
+.tours-p1,
+.tours-p2,
+.tours-p3 {
+    margin: 24px auto;
+}
+
+.tours-p2>li {
+    margin-bottom: 16px;
+}
+
+.tours-p4 {
+    margin-top: 28px;
+}
+
+/* section destination */
+.destination-container {
+    margin-top: 100px;
+}
+
+
+.destination-title {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+    font-family: 'Mulish';
+    padding-top: px;
+}
+
+.destination-description {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 48px;
+    font-family: 'Mulish';
+    width: 643px;
+    margin: 0 auto 48px;
+}
+
+.destination-img-container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 16px;
+}
+
+.destination-img-container img {
+    width: 100%;
+    border-radius: 16px;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FFF;
+    text-align: center;
+    font-family: 'Mulish';
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.grid-item1 {
+    grid-column: 1/span 6;
+    position: relative;
+}
+
+.grid-item2 {
+    grid-column: 7/span 6;
+    position: relative;
+}
+
+.grid-item3 {
+    grid-column: 1/span 4;
+    position: relative;
+}
+
+.grid-item4 {
+    grid-column: 5/span 5;
+    position: relative;
+}
+
+.grid-item5 {
+    grid-column: 10/span 3;
+    position: relative;
+}
+
+.grid-item6 {
+    grid-column: -13/ span 5;
+    position: relative;
+}
+
+.grid-item7 {
+    grid-column: -8/span 7;
+    position: relative;
+}
+
+/* section choose */
+.choose-container {
+    margin-top: 100px;
+}
+
+.choose-title {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+    font-family: 'Mulish';
+    padding-top: px;
+}
+
+.choose-description {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 48px;
+    font-family: 'Mulish';
+    width: 643px;
+    margin: 0 auto 48px;
+}
+
+.card-title {
+    color: #131318;
+    text-align: start;
+    font-family: 'Mulish';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    padding-top:24px;
+    padding-bottom: 16px;
+}
+
+.card-description {
+    color: #5A5A5D;
+    font-family: 'Mulish';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+
+.card1 {
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+}
+
+.card2 {
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+
+.card3 {
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+}
+
+.choose-card-container{
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 24px;
+    
+}
+
+.card1{
+    grid-column: 1/span 6;
+    padding:32px;
+ }
+ 
+ .card2{
+     grid-column: 7/span 6;
+     padding:32px;
+ }
+ 
+ .card3{
+     grid-column: -10/span 6;
+     padding:32px;
+ }
+
+ /* section discount */
+
+ .discount-container {
+    margin-top: 100px;
+}
+
+.discount-title {
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+    font-family: 'Mulish';
+
 }
