--- a/styles.css
+++ b/styles.css
@@ -544,7 +544,7 @@ nav li {
     font-weight: 400;
     line-height: 26px;
     /* 162.5% */
-    margin:24px auto;
+    margin: 24px auto;
 }
 
 .perfect-p2 {
@@ -615,11 +615,161 @@ nav li {
     border-bottom: none;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top:50px;
+    margin-top: 50px;
 }
 
-.perfect-white-line{
+.perfect-white-line {
     position: relative;
-    top:373px;
+    top: 375px;
     left: 20px;
+}
+
+/* section newsletter */
+.newsletter-container {
+    margin-bottom: 100px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    
+    font-family: 'Mulish';
+}
+
+.newsletter-content {
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px;
+    max-width: 474px;
+    
+}
+
+.newsletter-content-title {
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 16px;
+
+}
+
+.newsletter-content-description {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+.newsletter-line {
+    margin-bottom: 24px;
+}
+
+.subs-button {
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    padding: 14px 185px 14px 185px;
+    border-radius: 8px;
+    background-color: #FF5400;
+    border: 0;
+    margin-top: 10px;
+    font-family: 'Mulish';
+    width: 458px;
+}
+
+.newsletterinp {
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+    padding: 16px 250px 16px 20px;
+    margin-bottom: 16px;
+    border: 0;
+}
+
+
+/* img */
+
+.newsletter-img {
+    background-image: url(Images/Rectangle\ 8\ \(1\).png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 16px;
+    background-color: aqua;
+    max-width: 672px;
+}
+
+.newsletter-img-textbox {
+    border-radius: 16px;
+    background: #FF5400;
+    padding: 10px 20px 10px 20px;
+    margin-right: 160px;
+    margin-left: 160px;
+    position: relative;
+    top: 66%;
+    transform: rotate(-25deg);
+    left: 26%;
+    max-width: 324px;
+}
+
+.newsletter-img-title {
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.newsletter-img-subtitle {
+    color: #FFF;
+    font-size: 32px;
+    text-align: center;
+    font-weight: 800;
+}
+
+/* section footer  */
+
+footer {
+    background-color: rgba(19, 19, 24, 0.05);
+    padding-top: 110px;
+    text-align: center;
+}
+
+.footer-title {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-family: 'Mulish';
+    color: var(--Dark-01, #131318);
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 15px;
+    justify-content: center;
+}
+
+.footer-description {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 32px;
+    width: 769px;
+    margin: 0 auto 32px;
+    font-family: 'Mulish';
+
+}
+
+.footer-icons {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+
+.footer-end-text {
+    padding-bottom: 110px;
+    color: #131318;
+    font-family: 'Inter';
+    font-size: 16px;
+    font-weight: 300;
+    
 }
