--- a/styles.css
+++ b/styles.css
@@ -558,7 +558,7 @@ nav li {
 }
 
 .perfect-img {
-    background-image: url("/Images/Group\ 40089.png");
+    background-image: url("Images/Group\ 40089.png");
     background-size: cover;
     max-width: 610px;
     border-radius: 16px;
@@ -773,3 +773,4 @@ footer {
     font-weight: 300;
     
 }
+
